--- a/winds/winds.Rmd
+++ b/winds/winds.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "TTT, flux et champs vectoriel pour la visualisation de matrice OD</br>"
+title: "TTT</br>Flux et champs vectoriel </br>pour la visualisation de matrice OD</br>"
 author: "Etienne Côme"
 date: "**2020**"
 output:
@@ -82,7 +82,7 @@ library(sf)
 library(dplyr)
 ```
 
-# Exercise 1 : un exemple historique, les dollars de Tobler
+# Exercise 1 : Un exemple historique, les dollars de Tobler
 
 ```{block, box.title = "Lire des données", box.body = list(fill = "white"), box.icon = "fa-star"}
 Importez les données dollars contenues dans le package `ttt` et regardez leurs structure. 
@@ -97,17 +97,21 @@ Utilisez `data(dollars)` et `str(dollars)`
 data(dollars)
 str(dollars)
 ```
-
-Vous deviez avoir dans votre environement une liste `dollars` avec trois champs  :
+```{block, box.title = "Structure des données", box.body = list(fill = "white"), box.icon = "fa-star"}
+Vous devriez avoir dans votre environement une liste `dollars` avec trois champs  :
 
 - un champ `OD` contenant une matrice OD de taille 12 x 12 contenant des flux
 - un champ `polygones` contenant les contours des 12 régions des USA 
+```
 
-```{block, box.title = "Observations et prétraitements", box.body = list(fill = "white"), box.icon = "fa-star"}
-Importez les données dollars contenues dans le package `ttt` et regardez leurs structure. 
+```{block, box.title = "Calculez les balances", box.body = list(fill = "white"), box.icon = "fa-star"}
+Calculez les balances en chaque noeuds de la matrice OD.  
 ```
 
 
+```{block, opts.label = "clues"}
+Utilisez `?rowSums` et `?colSums`
+```
 
 
 ```{r, solution=TRUE}
@@ -115,41 +119,129 @@ delta = rowSums(dollars$OD)-colSums(dollars$OD)
 dollars$polygones$delta=delta
 ```
 
+```{block, box.title = "Carte +/- ", box.body = list(fill = "white"), box.icon = "fa-star"}
+Faire une carte en +/- des balances.
+```
+
+
+```{block, opts.label = "clues"}
+Utilisez la fonction `?plus_minus_map`.
+```
 
 
 ```{r, echo=FALSE}
 plot(st_geometry(dollars$polygones))
-plusmoins(dollars$polygones,"delta")
+plus_minus_map(dollars$polygones,"delta")
 ```
 
 ```{r, solution=TRUE}
 plot(st_geometry(dollars$polygones))
-plusmoins(dollars$polygones,"delta")
+plus_minus_map(dollars$polygones,"delta")
 ```
 
+```{block, box.title = "Calcul du potentiel", box.body = list(fill = "white"), box.icon = "fa-star"}
+Calculez le potentiel de poisson de ce jeu de données. 
+```
+
+
+```{block, opts.label = "clues"}
+Utilisez la fonction `?poisson.potential`.
+```
 
 ```{r, solution=TRUE}
-pot.dollars = poisson.potential(dollars$polygones,nb_it = 5000)
+pot.dollars = compute_poisson_potential(dollars$polygones,nb_it = 5000)
 ```
+
+```{block, box.title = "Visualisation du potentiel", box.body = list(fill = "white"), box.icon = "fa-star"}
+Regarder la structure de la data.frame retournée et visualisé le champs potentiel stocké dans la colonne `attractivity`.
+```
+
+
+```{block, opts.label = "clues"}
+Utilisez la fonction `?str` et `?plot` ou la librairie `ggplot` si vous le souhaitez.
+```
+
 
 ```{r, echo=FALSE}
 plot(pot.dollars%>% select(attractivity))
 ```
 
 ```{r, solution=TRUE}
+str(pot.dollars)
 plot(pot.dollars%>% select(attractivity))
 ```
 
 
 ```{r, echo=FALSE}
 plot(st_geometry(dollars$polygones))
-poisson.flows(pot.dollars)
+poisson_flows_map(pot.dollars)
 ```
 
 ```{r, solution=TRUE}
 plot(st_geometry(dollars$polygones))
-poisson.flows(pot.dollars)
+poisson_flows_map(pot.dollars)
 ```
+
+# Exercice 2 : Données de migrations résidentielles
+
+```{block, box.title = "Données ", box.body = list(fill = "white"), box.icon = "fa-star"}
+Importez les données dollars contenues dans le package `ttt` et regardez leurs structure. 
+```
+
+```{r, solution=TRUE}
+migr_agg=readRDS("FD_MIGCOM_2018AGG.rds") %>% mutate_if(is.factor,as.character)
+```
+
+```{r, solution=TRUE}
+com_arr = migr_agg %>% select(COMMUNE,ARM) %>% filter(ARM!="ZZZZZ") %>% distinct()
+```
+```{r, solution=TRUE}
+migr_com = migr_agg  %>%
+  left_join(com_arr,by=c("DCRAN"="ARM")) %>%
+  mutate(COMMUNE_ANM1 = if_else(is.na(COMMUNE.y),DCRAN,COMMUNE.y),COMMUNE=COMMUNE.x) %>%
+  select(COMMUNE,COMMUNE_ANM1,CSM,IPONDI) %>%
+  mutate(DEP_ANM1= substr(COMMUNE_ANM1,1,2),DEP = substr(COMMUNE,1,2))
+```
+```{r, solution=TRUE}
+migr_clean = migr_com %>%
+  filter(CSM==7) %>%
+  filter(COMMUNE!=COMMUNE_ANM1) %>%
+  filter(!(DEP %in% c("2A","2B",96:100)),!(DEP_ANM1 %in% c("2A","2B",96:100))) %>%
+  arrange(desc(IPONDI))
+```
+```{r, solution=TRUE}
+migr_in = migr_clean %>% group_by(COMMUNE) %>% summarize(NIN = sum(IPONDI))
+migr_out = migr_clean %>% group_by(COMMUNE_ANM1) %>% summarize(NOUT = sum(IPONDI))
+
+delta = migr_in %>% full_join(migr_out,by=c("COMMUNE"="COMMUNE_ANM1")) %>%
+  tidyr::replace_na(list(NIN=0,NOUT=0)) %>%
+  mutate(delta = NIN-NOUT)
+```
+```{r, solution=TRUE}
+#remotes::install_github("antuki/CARTElette/CARTElette@RPackage")
+#library(CARTElette)
+#COM <- charger_carte(COG=2020,nivsupra="COM")
+#library(sf)
+#library(dplyr)
+#write_sf(COM,"COM.gpkg")
+COM= read_sf("COM.gpkg")
+```
+```{r, solution=TRUE}
+delta_geo = COM %>%
+  filter(!(INSEE_DEP %in% c("2A","2B",971:976))) %>%
+  left_join(delta,by=c("INSEE_COM"="COMMUNE")) %>%
+  tidyr:: replace_na(list(delta=0)) %>%
+  st_transform(2154)
+```
+```{r, solution=TRUE}
+
+plot(delta_geo %>% group_by(INSEE_DEP) %>% summarize(delta=sum(delta)) %>% ungroup() %>% select(delta))
+```
+```{r, solution=TRUE}
+pot = compute_poisson_potential(delta_geo,cellsize = 10000,nb_it = 5000)
+plot(pot %>% select(attractivity))
+```
+
 
 
 
